tests/tooling/fixtures/native/execution/positive/while_identifier_const_true_body_return_accept.objc3
module WhileIdentifierConstTrueBodyReturnAccept;

fn main() -> i32 {
  let gate = 1;
  while (gate) {
    return 42;
  }
}
