tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_expression_let_init_pure.objc3
module MisplacedQualifierExpressionLetInitPure;

fn main() -> i32 {
  let seed = 1;
  let rhs = pure;
  return seed;
}